--- a/bigbluebutton-html5/imports/ui/components/media/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/media/styles.scss
@@ -6,6 +6,7 @@
   flex: 2;
   align-items: center;
   justify-content: center;
+  overflow: auto;
 }
 
 %ratio {
